<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dilog_border">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_heading"
        android:gravity="center"
        android:textSize="20dp"
        android:fontFamily="@font/google_sans_bold"
        android:textColor="@color/colorText"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/editText_player1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player1"
        android:textColor="@color/colorPrimary"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/editText_player2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player2"
        android:textColor="@color/colorPrimary"
        android:layout_margin="10dp"/>

</LinearLayout>