<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorSubBackground"
            android:elevation="8dp"
            app:cardCornerRadius="6dp">

            <TextView
                android:id="@+id/courtName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/google_sans_bold"
                android:gravity="center"
                android:text="@string/court_name"
                android:textColor="@color/colorText"
                android:textSize="25dp" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <!-- This Linear Layout is for Score table-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:backgroundTint="@color/colorSubBackground"
            android:elevation="8dp"
            app:cardCornerRadius="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <!--Previous Set -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        style="@style/scoreBoardHeadingStyle"
                        android:text="@string/previous_set" />
                    <!-- Player 1 sets-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/player1_set1"
                            style="@style/setsTextViewStyle" />

                        <TextView
                            android:id="@+id/player1_set2"
                            style="@style/setsTextViewStyle" />

                        <TextView
                            android:id="@+id/player1_set3"
                            style="@style/setsTextViewStyle" />
                    </LinearLayout>
                    <!-- Player 1 sets-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/player2_set1"
                            style="@style/setsTextViewStyle" />

                        <TextView
                            android:id="@+id/player2_set2"
                            style="@style/setsTextViewStyle" />

                        <TextView
                            android:id="@+id/player2_set3"
                            style="@style/setsTextViewStyle" />

                    </LinearLayout>


                </LinearLayout>
                <!--Players name -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        style="@style/scoreBoardHeadingStyle"
                        android:text="@string/players" />

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/colorText"
                        android:elevation="8dp"
                        app:cardCornerRadius="6dp">

                        <TextView
                            android:id="@+id/player1_name"
                            style="@style/playersNameStyle" />

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/colorText"
                        android:elevation="8dp"
                        app:cardCornerRadius="6dp">

                        <TextView
                            android:id="@+id/player2_name"
                            style="@style/playersNameStyle" />

                    </android.support.v7.widget.CardView>

                </LinearLayout>
                <!--Sets, Game and Points -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="horizontal">
                    <!-- Sets -->
                    <LinearLayout style="@style/setsGamesAndPointsLayoutStyle">

                        <TextView
                            style="@style/scoreBoardHeadingStyle"
                            android:text="@string/set" />

                        <TextView
                            android:id="@+id/player1_set"
                            style="@style/setsGamesPointsTextViewStyle" />

                        <TextView
                            android:id="@+id/player2_set"
                            style="@style/setsGamesPointsTextViewStyle" />

                    </LinearLayout>

                    <LinearLayout style="@style/setsGamesAndPointsLayoutStyle">

                        <TextView
                            style="@style/scoreBoardHeadingStyle"
                            android:text="@string/game" />

                        <TextView
                            android:id="@+id/player1_game"
                            style="@style/setsGamesPointsTextViewStyle" />

                        <TextView
                            android:id="@+id/player2_game"
                            style="@style/setsGamesPointsTextViewStyle" />
                    </LinearLayout>

                    <LinearLayout style="@style/setsGamesAndPointsLayoutStyle">

                        <TextView
                            style="@style/scoreBoardHeadingStyle"
                            android:text="@string/points" />

                        <TextView
                            android:id="@+id/player1_point"
                            style="@style/setsGamesPointsTextViewStyle" />

                        <TextView
                            android:id="@+id/player2_point"
                            style="@style/setsGamesPointsTextViewStyle" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
    <!-- This Linear Layout is for Court-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:backgroundTint="@color/colorCourt"
            android:elevation="8dp"
            app:cardCornerRadius="6dp">
            <!-- Linear layout for court for double player-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="45dp"
                android:background="@color/colorCourt"
                android:orientation="vertical">
                <!-- Single players outside -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@drawable/border_text" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@drawable/border_text" />
                </LinearLayout>
                <!-- Linear layout for court for Single player-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8"
                    android:background="@drawable/border_text"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="10dp">

                        <Button
                            android:id="@+id/player1_head"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentLeft="true"
                            android:background="@drawable/button_round"
                            android:fontFamily="@font/google_sans_bold"
                            android:textColor="@color/colorBackground" />
                    </RelativeLayout>

                    <!-- Service box for Player 1-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/player1_service__box1"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/border_text" />

                        <TextView
                            android:id="@+id/player1_service__box2"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/border_text" />

                    </LinearLayout>
                    <!-- Service box for Player 1-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/player2_service__box1"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/border_text" />

                        <TextView
                            android:id="@+id/player2_service__box2"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/border_text" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="10dp">

                        <Button
                            android:id="@+id/player2_head"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:background="@drawable/button_round"
                            android:fontFamily="@font/google_sans_bold"
                            android:textColor="@color/colorBackground" />
                    </RelativeLayout>
                </LinearLayout>
                <!-- Single players outside -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@drawable/border_text" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@drawable/border_text" />
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
    <!-- This Linear Layout is for input to the score board -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:backgroundTint="@color/colorSubBackground"
            android:elevation="8dp"
            app:cardCornerRadius="6dp">
            <!-- Score-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/player1_name1"
                        style="@style/scoreBoardHeadingStyle"
                        android:text="@string/player1" />

                    <Button
                        android:id="@+id/player1ButtonScorePlus"
                        style="@style/scoreButtonPlusStyle" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center">

                        <Button
                            android:id="@+id/match_start"
                            style="@style/startBreakButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/start" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center">

                        <Button
                            android:id="@+id/teabreak"
                            style="@style/startBreakButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tea_break" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/player2_name2"
                        style="@style/scoreBoardHeadingStyle"
                        android:text="@string/player2" />

                    <Button
                        android:id="@+id/player2ButtonScorePlus"
                        style="@style/scoreButtonPlusStyle" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>